--- a/cr7.css
+++ b/cr7.css
@@ -1,19 +1,16 @@
-div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+
 body {
     margin: 0px;
     padding: 0px;
-    height: 100vh;
+   background-color: rgb(207, 249, 255);
 }
 .pitch {
-    cursor: pointer;
+  
     width: 100%;
-    height: 600px;
-    padding: 0%;
-    background: transparent;
+    height: 700px;
+position: absolute;
+top:-160px;
+background: transparent;
 }
 .tit {
     font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
@@ -28,30 +25,27 @@ body {
 .goal {
     cursor: pointer;
     width: 10%;
-    height: 110px;
+    height: 120px;
     position: absolute;
-    rotate: 25deg;
-    left: 75%;
-    top: 200px;
-    background: transparent;
+    rotate: 15deg;
+    left: 80%;
+    top: 240px;
 }
 
 .goal2 {
     cursor: pointer;
     width: 10%;
-    height: 110px;
+    height: 130px;
     transform: scaleX(-1);
-    rotate: -25deg;
+    rotate: -15deg;
     position: absolute;
-    left: 15%;
-    top: 200px;
-    background: transparent;
+    left: 11%;
+    top: 240px;
 }
 .box {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
 }
 .go {
     width: 12%;
